--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "itsgoingd/clockwork": "^5.2",
+        "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.0"
     },
