--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "itsgoingd/clockwork": "^5.2",
         "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laravelcollective/html": "^6.4"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
