--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "elephantio/elephant.io": "^4.7",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -16,7 +17,8 @@
         "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.0",
-        "laravelcollective/html": "^6.4"
+        "laravelcollective/html": "^6.4",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
