--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "dotenv": "^16.4.5",
+        "laravel-echo": "^1.16.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0"
+        "pusher-js": "^8.4.0-rc2",
+        "resolve-url-loader": "^3.1.0",
+        "vue-template-compiler": "^2.7.16"
     }
 }
