--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Personal Blogs"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:tmnACNUCHDD9ToD9Hx+QihjVlim72B37CkMkfAezeZ0=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
@@ -12,11 +12,17 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=pblogs
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
-BROADCAST_DRIVER=log
+WEBSOCKET_URL="http://localhost:3000"
+BROADCAST_DRIVER="pusher"
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=
+
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -25,23 +31,18 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=0.0.0.0
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS="govind@pblogs.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
