--- a/.env.example
+++ b/.env.example
@@ -14,35 +14,43 @@ DB_DATABASE=pblogs
 DB_USERNAME=root
 DB_PASSWORD=root
 
-WEBSOCKET_URL="http://localhost:3000"
-BROADCAST_DRIVER="pusher"
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=
+MONGO_HOST="localhost"
+MONGO_PORT="27017"
+MONGO_DATABASE="pblogs"
+MONGO_USERNAME=null
+MONGO_PASSWORD=null
 
-CACHE_DRIVER=file
+WEBSOCKET_URL="http://localhost:3000"
+# BROADCAST_DRIVER="pusher"
+
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
+REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=0.0.0.0
+MAIL_HOST="0.0.0.0"
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="govind@pblogs.com"
+MAIL_FROM_ADDRESS="govindy.enjay@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
+
+PUSHER_APP_ID=null
+PUSHER_APP_KEY=null
+PUSHER_APP_SECRET=null
+PUSHER_APP_CLUSTER=null
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
