--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.4",
+        "mongodb/laravel-mongodb": "^3.8",
         "predis/predis": "^2.2",
         "pusher/pusher-php-server": "^7.2"
     },
